src/objects/Survey__c.object
<CustomObject>
    <description>Collects results for the Survey type.</description>
    <fields>
        <fullName>Answer_10__c</fullName>
        <label>Answer 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_11__c</fullName>
        <label>Answer 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_1__c</fullName>
        <label>Answer 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_10__c</fullName>
        <label>Question 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_11__c</fullName>
        <label>Question 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <label>Question 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Tracker</label>
        <referenceTo>Request_Tracker__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>Graphics</fullName>
                </value>
                <value>
                    <fullName>Photography</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Web-Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Response__c</fullName>
        <label>Survey Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Survey with erroneously entered response</fullName>
                </value>
                <value>
                    <fullName>Survey with negative response-Resolved</fullName>
                </value>
                <value>
                    <fullName>Survey with negative response-Unresolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_response_Comments__c</fullName>
        <label>Survey Response Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request Tracker - Blog/Wiki</fullName>
                </value>
                <value>
                    <fullName>Request Tracker - Creative Services</fullName>
                </value>
                <value>
                    <fullName>OCM_Request_Tracker_Communication_Services</fullName>
                </value>
                <value>
                    <fullName>OCM_Request_Tracker_Media_Affairs_Public_Engagement</fullName>
                </value>
                <value>
                    <fullName>OCM_Request_Tracker_Survey_Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Automotive_Service_Survey</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Answer_1__c</columns>
        <columns>Answer_2__c</columns>
        <columns>Answer_3__c</columns>
        <columns>Answer_4__c</columns>
        <columns>Answer_5__c</columns>
        <columns>Answer_6__c</columns>
        <columns>Answer_7__c</columns>
        <columns>Answer_8__c</columns>
        <columns>Answer_9__c</columns>
        <columns>Answer_10__c</columns>
        <columns>Answer_11__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey__c.Automotive_Service_Survey</value>
        </filters>
        <label>Automotive Service Survey</label>
        <sharedTo>
            <group>Contact_Manager_Automotive_Survey</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OCM_Req_Tracker_Survey</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>OCM Req Tracker Survey</label>
    </listViews>
    <nameField>
        <displayFormat>SUR-{0000}</displayFormat>
        <label>Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <recordTypes>
        <fullName>Automotive_Service_Survey</fullName>
        <active>true</active>
        <label>Automotive Service Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employee_Email_Survey</fullName>
        <active>true</active>
        <label>Employee Email Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey_Layout</fullName>
        <active>true</active>
        <label>Survey Layout</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>